# neptune-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
src/neptune_cli/: __init__.py  __main__.py  cli.py  client.py  output.py
tests/: test_cli.py
